--- a/RPS.Web/RPS.Web.Razor.csproj
+++ b/RPS.Web/RPS.Web.Razor.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>RPS.Web.Razor</AssemblyName>
+    <RootNamespace>RPS.Web.Razor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2021.1.119" />
   </ItemGroup>
 
